--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -11,15 +11,20 @@
     crossorigin=""/>
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
-
+   
 </head>
 <body>
     <!--The div that holds our map-->
-    <div id="map"></div>
+    <div id="mapid"></div>
 
     <!-- Leaflet JavaScript -->
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
     crossorigin=""></script>
+    <!-- API key -->
+    <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- Our JavaScript -->
+    <script type="text/javascript" src="static/js/logic.js"></script>
+
 </body>
 </html>
